objects/Order_Line_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Purchase_Order__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Purchase Order #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FPD_List_Price__c</fullName>
        <label>FPD List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Agreed_Price__c</fullName>
        <label>Final Agreed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Line Approvals</relationshipLabel>
        <relationshipName>Order_Line_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line_Status__c</fullName>
        <label>Order Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Placed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Material_Group__c</fullName>
        <description>This field is used to determine the Approval Group.</description>
        <formula>TEXT(OrderItem__r.Product2.PMC_CPQ_MaterialGroup__c)</formula>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_By_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Price By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Order Line Approvals</relationshipLabel>
        <relationshipName>Order_Line_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ship To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmittedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Line_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Line Approval</label>
    <nameField>
        <displayFormat>OLA{0000}</displayFormat>
        <label>Order Line Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>